# rust-nvidia-deepstream

./: Cargo.toml  rust-nvidia-deepstream.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
nvds-rs/: Cargo.toml
nvds-rs/src/: lib.rs
nvds-sys/: Cargo.toml  build.rs
nvds-sys/src/: ffi.rs  lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  observability.rs
try-out/: Cargo.toml
try-out/src/: main.rs
try-wgpu/: Cargo.toml
try-wgpu/src/: main.rs
try-wgpu/src/shaders/: grayscale.wgsl
