[package]
name = "try-out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ctrlc = "3.4.1"
dotenv = "0.15.0"
itertools = "0.11.0"
gstreamer = "0.21.0"
gstreamer-app = "0.21.0"
tracing-gstreamer = "0.6.0"

nvds = { package = "nvds-rs", path = "../nvds-rs" }
shared = { path = "../shared" }
