[package]
name = "try-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.14.0"
image = "0.24.7"
pollster = "0.3.0"
wgpu = "0.17.0"
winit = "0.29.1-beta"

shared = { path = "../shared" }
